--- a/Assignment1.html
+++ b/Assignment1.html
@@ -12,11 +12,10 @@
     <h1>About me</h1>
     <div>
         <h2>
-            <p> My name is Natthamate Phantajaruphong. My Student ID is xxxxxxxx. My friends calls me PP. I'm 21 years old now and currently study in
-                third year at Faculty of Engineering majored in Mechanical Engineering. The reasons I choose to study
-                mechanical engineering is I like to learn about the machinary like, how they works or how do we create or
-                design the machine. Plus I want to work in an automotive or aviation field so, mechanical engineering really
-                suits me.
+            <p> My name is Jiang Tao. My Student ID is 622115507. My friends calls me Tony. I'm 18 years old now and currently study in
+                first year at College of Arts Meida and technology. The reasons I choose to study
+                Software engineering is that I want to know how the computer working by the computer language and how to write the computer language such as java and c++.
+               
         </h2>
         </p>
         <img src="me.png">
