--- a/Assignment1.html
+++ b/Assignment1.html
@@ -13,8 +13,8 @@
     <div>
         <h2>
             <p> My name is Jiang Tao. My Student ID is 622115507. My friends calls me Tony. I'm 18 years old now and currently study in
-                first year at College of Arts Meida and technology. The reasons I choose to study
-                Software engineering is that I want to know how the computer working by the computer language and how to write the computer language such as java and c++.
+                first year at College of Arts Meida and technology. The reasons I choose to study Software engineering is that
+                I want to know how the computer working by the computer language and how to write the computer language such as java and c++.
                
         </h2>
         </p>
